<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/enter_value"
                android:layout_width="0dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:digits="0123456789/. "
                android:inputType="number"
                android:singleLine="true"
                android:textSize="24sp"
                android:hint="@string/enter_value">

                <requestFocus />
            </EditText>
            <com.example.jens.kitchenconverter.MySpinner
                android:id="@+id/from_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dialog"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <TextView
                android:id="@+id/result_value"
                android:layout_width="0dp"
                android:layout_margin="20dp"
                android:layout_weight = "1"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:textSize="26sp"/>
            <com.example.jens.kitchenconverter.MySpinner
                android:id="@+id/to_spinner"
                android:layout_width="wrap_content"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dialog"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"/>
            </TableRow>
        <TableRow
            android:id="@+id/tableRow3b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <ToggleButton
                android:id="@+id/toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/fractions"
                android:textOff="@string/decimals"
                android:checked="true"/>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <com.example.jens.kitchenconverter.MySpinner
                android:id="@+id/density_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dialog"/>
        </TableRow>
    </TableLayout>
</LinearLayout>