<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:id="@+id/grid_layout"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/general_converter"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/general" />
    </GridLayout>

</LinearLayout>
