<resources>
    <string name="app_name">Kitchen Converter</string>

    <string name="action_settings">Settings</string>
    <string name="addUnit">Add unit</string>
    <string name="factor">Factor</string>
    <string name="dimension">Dimension</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="decimals">decimals</string>
    <string name="fractions">fractions</string>
    <string name="substance">Substance</string>
    <string name="density">Density</string>
    <string name="clear">Clear</string>
    <string name="general">General</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addDensity">Add Density</string>
    <string name="editDensity">Edit Density</string>
    <string name="cancel">Cancel</string>
    <string name="editUnit">Edit unit</string>
    <string name="revert_database">Revert Database</string>
    <string name="packageName">Package type</string>
    <string name="editPackageDensity">Edit Packages</string>
    <string name="addPackageDensity">Add package</string>
    <string name="temperature">Temperature</string>
    <string name="general_converter">General Converter</string>
    <string name="temperature_converter">Convert temperature</string>
    <string name="edit_units">Edit Units</string>
    <string name="edit_substances">Edit Substances</string>
    <string name="edit_packages">Edit Packages</string>
    <string name="units">Units</string>
    <string name="substances">Substances</string>
    <string name="packages">Packages</string>
    <string name="revert_database_question">Are you sure to revert the units and densities to default values?</string>
    <string name="confirm_base_unit">Confirm new base unit</string>
    <string name="substance_exists">This substance already exists</string>
    <string name="enter_value">Enter value</string>

    <string-array name="dimensions_array">
        <item>mass</item>
        <item>volume</item>
        <item>length</item>
        <item>area</item>
    </string-array>
</resources>
